--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-    <meta name="author" content="Vatsal Singh" />
+    <meta name="author" content="Kurt Reserva" />
     <meta
       name="keywords"
-      content="calculator app, calculator, frontendmentor challenge, webapp project, html project, javascript project"
+      content="lingaw2"
     />
     <meta
       name="description"
-      content="Calculator App with three Themes build by Vatsal Singh, challenge on Frontend Mentor"
+      content="Calculator App with Three Themes build by Kurt Reserva"
     />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -27,13 +27,13 @@
     />
     <link rel="stylesheet" href="css/style.css" />
 
-    <title>Calculator app</title>
+    <title>Calculator | Kurt Reserva</title>
   </head>
 
   <body class="theme-1">
     <main>
       <header>
-        <h4>calc</h4>
+        <h4>CALCULATOR</h4>
 
         <div class="theme-container">
           <h6>THEME</h6>
@@ -190,13 +190,9 @@
       </div>
     </main>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Fron,tend Mentor</a
-      >. Coded by
-      <a href="https://github.com/vatsalsinghkv/calculator-app" target="_blank"
-        >Vatsal Singh</a
+    <div class="attribution"> Developed by
+      <a href="https://www.instagram.com/kurtchintaaa/" target="_blank"
+        >Kurt Reserva</a
       >.
     </div>
 
